fix(folderTree): #LOOL-59 remove horizontal scrollBar in folder tree display (#60)

--- a/scss/specifics/lool-connector/_lool-connector.scss
+++ b/scss/specifics/lool-connector/_lool-connector.scss
@@ -29,6 +29,9 @@ body.lool {
         &-tree {
           max-height: 50vh;
           overflow-y: auto;
+          > ul {
+            box-sizing: border-box;
+          }
         }
       }
 
